@@ -27,6 +27,9 @@
  */
 
 
+#include <stdlib.h>
+#include <stdio.h>
+
 #include "chan_misdn_config.h"
 
 #include <asterisk/config.h>
@@ -34,9 +37,6 @@
 #include <asterisk/logger.h>
 #include <asterisk/lock.h>
 #include <asterisk/strings.h>
-#include <stdlib.h>
-#include <string.h>
-#include <stdio.h>
 
 #include <asterisk/utils.h>
 #define AST_LOAD_CFG ast_config_load
